[gd_scene load_steps=7 format=2]

[ext_resource path="res://ijo lon ma/leko.png" type="Texture" id=1]
[ext_resource path="res://ijo lon ma/leko.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=1]
friction = 150.0
absorbent = true

[sub_resource type="CircleShape2D" id=3]
radius = 5.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 43, 5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 40, 40 )

[node name="leko" type="RigidBody2D" groups=[
"push",
]]
collision_layer = 2
collision_mask = 3
mode = 2
physics_material_override = SubResource( 1 )
gravity_scale = 10.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 0.55, 0.55 )
texture = ExtResource( 1 )

[node name="sike" type="CollisionShape2D" parent="."]
position = Vector2( -43.5, -43.5 )
shape = SubResource( 3 )

[node name="sike2" type="CollisionShape2D" parent="."]
position = Vector2( 43.5, -43.5 )
shape = SubResource( 3 )

[node name="sike3" type="CollisionShape2D" parent="."]
position = Vector2( 43.5, 43.5 )
shape = SubResource( 3 )

[node name="sike4" type="CollisionShape2D" parent="."]
position = Vector2( -43.5, 43.5 )
shape = SubResource( 3 )

[node name="leko" type="CollisionShape2D" parent="."]
position = Vector2( 0, -43 )
shape = SubResource( 2 )

[node name="leko2" type="CollisionShape2D" parent="."]
position = Vector2( 0, 43 )
shape = SubResource( 2 )

[node name="leko3" type="CollisionShape2D" parent="."]
position = Vector2( -43, 0 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="leko4" type="CollisionShape2D" parent="."]
position = Vector2( 43, 0 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="big" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 4 )
